# errmap

./: README.md  pyproject.toml
errmap/: __init__.py  errmap.py
errmap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_errmap.py
