[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "errmap"
version = "1.0.0"
description = "A tree-style Python error formatter that replaces the default traceback printer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["error", "traceback", "debugging", "formatter", "utility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Homepage = "https://github.com/kp-dev1/errmap"
Repository = "https://github.com/kp-dev1/errmap"
Issues = "https://github.com/kp-dev1/errmap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["errmap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
